<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GameBox</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">766497663395114</string>
    <string name="URL">http://54.178.232.185</string>
    <string name="testURL">http://imagic-api-187001008.ap-northeast-1.elb.amazonaws.com</string>

    <string name="edit">編輯</string>
    <string name="delete">刪除</string>
    <string name="cancel">取消</string>
    <string name="create">建立</string>
    <string name="finish">完成</string>
    <string name="confirm">確定</string>
    <string name="date">日期</string>
    <string name="user">我方</string>
    <string name="enemy">對方</string>
    <string name="enemy_box">對手</string>
    <string name="team_foul">團犯</string>

    <!-- menu -->
    <string name="intent_to_home">儲存回首頁</string>
    <string name="history">歷史紀錄</string>
    <string name="box_score">數據</string>

    <!-- home page activity -->
    <string name="home_page_team_manager">球隊管理</string>
    <string name="home_page_record">開始紀錄</string>

    <!-- create team dialog -->
    <string name="create_team_name">球隊名稱</string>
    <string name="create_team_code">隊伍密碼</string>
    <string name="create_team_code_hint">四碼數字</string>
    <string name="create_team_name_empty">球隊名稱不得為空</string>
    <string name="create_team_code_empty">請輸入四位數字的球隊密碼</string>

    <!-- create player dialog -->
    <string name="create_player_number">背號</string>
    <string name="create_player_name">名字</string>
    <string name="create_player_leader">隊長</string>
    <string name="create_player_number_empty">球員背號不得為空</string>
    <string name="create_player_name_empty">球員名稱不得為空</string>

    <!-- select team activity -->
    <string name="select_team_constant">選擇球隊</string>

    <!-- game list activity -->
    <string name="game_list_title">記錄比賽</string>
    <string name="game_list_name_constant">賽事名稱</string>
    <string name="game_list_name">%1$s vs %2$s</string>

    <!-- create game dialog -->
    <string name="create_game_name">賽事名稱</string>
    <string name="create_game_enemy">比賽對手</string>
    <string name="create_game_court">比賽場地</string>
    <string name="create_game_name_empty">比賽名稱不得為空</string>
    <string name="create_game_enemy_empty">比賽對手不得為空</string>
    <string name="create_game_court_empty">比賽場地不得為空</string>
    <string name="delete_game_title">刪除比賽紀錄?</string>
    <string name="delete_game_content">是否要刪除該比賽紀錄?</string>

    <!-- select starter activity -->
    <string name="select_starter_title">先發陣容</string>
    <string name="select_starter_player_name_constant">球員名稱</string>
    <string name="select_starter_name">#%1$d %2$s</string>
    <string name="select_starter_player_hint">需要五位先發球員</string>

    <!-- main activity -->
    <string name="back_homepage_content">是否要結束紀錄?</string>
    <string name="history_item_action">%1$s %2$s</string>

    <!-- action -->
    <string name="two_point_made">兩分球進</string>
    <string name="two_point_miss">兩分球沒進</string>
    <string name="three_point_made">三分球進</string>
    <string name="three_point_miss">三分球沒進</string>
    <string name="free_throw_made">罰球進</string>
    <string name="free_throw_miss">罰球沒進</string>
    <string name="off_rebound">進攻籃板</string>
    <string name="def_rebound">防守籃板</string>
    <string name="assist">助攻</string>
    <string name="block">阻攻</string>
    <string name="steal">抄截</string>
    <string name="turnover">失誤</string>
    <string name="foul">犯規</string>

    <!-- history activity-->
    <string name="history_title">歷史紀錄</string>
    <string name="history_delete_hint">是否要刪除該筆紀錄?</string>

    <!-- box score activity -->
    <string name="box_score_title">數據表</string>
    <string name="box_score_player_name_constant">球員</string>
    <string name="box_score_two_point_constant">兩分</string>
    <string name="box_score_three_point_constant">三分</string>
    <string name="box_score_free_throw_constant">罰球</string>
    <string name="box_score_rebound_constant">攻/守籃</string>
    <string name="box_score_assist_constant">助攻</string>
    <string name="box_score_block_constant">阻攻</string>
    <string name="box_score_steal_constant">抄截</string>
    <string name="box_score_turnover_constant">失誤</string>
    <string name="box_score_foul_constant">犯規</string>
    <string name="box_score_total_point_constant">得分</string>
    <string name="format">%1$d/%2$d</string>

    <!-- substitution activity -->
    <string name="substitution_title">更換球員</string>
    <string name="bench_player_constant">板凳球員</string>
    <string name="oncourt_player_constant">場上球員</string>
    <string name="on_court_player_hint">場上需要五個人</string>
</resources>
